@@ -1,16 +1,16 @@
-// Copyright 2019 The Chromium Authors. All rights reserved.
+// Copyright 2019 The Chromium Authors
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
 package org.chromium.components.background_task_scheduler.internal;
 
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.mockito.Mockito.eq;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import android.app.job.JobParameters;
+import android.os.Build;
 import android.os.PersistableBundle;
 
 import org.junit.Before;
@@ -29,14 +29,12 @@ import java.util.concurrent.TimeUnit;
 
 /** Unit tests for {@link BackgroundTaskJobService}. */
 @RunWith(BaseRobolectricTestRunner.class)
-@Config(manifest = Config.NONE)
+@Config(manifest = Config.NONE, sdk = Build.VERSION_CODES.S)
 public class BackgroundTaskJobServiceTest {
     private static BackgroundTaskSchedulerJobService.Clock sClock = () -> 1415926535000L;
     private static BackgroundTaskSchedulerJobService.Clock sZeroClock = () -> 0L;
     @Mock
     private BackgroundTaskSchedulerDelegate mDelegate;
-    @Mock
-    private BackgroundTaskSchedulerDelegate mAlarmManagerDelegate;
     @Mock
     private BackgroundTaskSchedulerUma mBackgroundTaskSchedulerUma;
     @Mock
@@ -46,9 +44,8 @@ public class BackgroundTaskJobServiceTest {
     public void setUp() {
         MockitoAnnotations.initMocks(this);
         BackgroundTaskSchedulerFactoryInternal.setSchedulerForTesting(
-                new BackgroundTaskSchedulerImpl(mDelegate, mAlarmManagerDelegate));
+                new BackgroundTaskSchedulerImpl(mDelegate));
         BackgroundTaskSchedulerUma.setInstanceForTesting(mBackgroundTaskSchedulerUma);
-        TestBackgroundTask.reset();
         BackgroundTaskSchedulerFactoryInternal.setBackgroundTaskFactory(
                 new TestBackgroundTaskFactory());
     }
@@ -62,35 +59,32 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(1)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testOneOffTaskDoesNotStartExactlyAtDeadline() {
         JobParameters jobParameters =
-                buildOneOffJobParameters(TaskIds.TEST, sClock.currentTimeMillis(), new Long(0));
+                buildOneOffJobParameters(TaskIds.TEST, sClock.currentTimeMillis(), Long.valueOf(0));
 
         BackgroundTaskJobService jobService = new BackgroundTaskJobService();
         jobService.setClockForTesting(sClock);
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(0)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
     @Feature({"BackgroundTaskScheduler"})
     public void testOneOffTaskDoesNotStartAfterDeadline() {
-        JobParameters jobParameters =
-                buildOneOffJobParameters(TaskIds.TEST, sZeroClock.currentTimeMillis(), new Long(0));
+        JobParameters jobParameters = buildOneOffJobParameters(
+                TaskIds.TEST, sZeroClock.currentTimeMillis(), Long.valueOf(0));
 
         BackgroundTaskJobService jobService = new BackgroundTaskJobService();
         jobService.setClockForTesting(sClock);
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(0)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -104,7 +98,6 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(1)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -122,7 +115,6 @@ public class BackgroundTaskJobServiceTest {
         verify(mBackgroundTaskSchedulerImpl, times(1))
                 .cancel(eq(ContextUtils.getApplicationContext()),
                         eq(TaskIds.OFFLINE_PAGES_BACKGROUND_JOB_ID));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -134,7 +126,6 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(1)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -149,7 +140,6 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(1)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -163,7 +153,6 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(0)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     @Test
@@ -178,50 +167,47 @@ public class BackgroundTaskJobServiceTest {
         assertFalse(jobService.onStartJob(jobParameters));
 
         verify(mBackgroundTaskSchedulerUma, times(0)).reportTaskStarted(eq(TaskIds.TEST));
-        assertEquals(0, TestBackgroundTask.getRescheduleCalls());
     }
 
     private static JobParameters buildOneOffJobParameters(
             int taskId, Long schedulingTimeMs, Long windowEndTimeForDeadlineMs) {
         PersistableBundle extras = new PersistableBundle();
         if (windowEndTimeForDeadlineMs != null) {
-            extras.putLong(BackgroundTaskSchedulerJobService.BACKGROUND_TASK_SCHEDULE_TIME_KEY,
+            extras.putLong(BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_SCHEDULE_TIME_KEY,
                     schedulingTimeMs);
-            extras.putLong(BackgroundTaskSchedulerJobService.BACKGROUND_TASK_END_TIME_KEY,
+            extras.putLong(BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_END_TIME_KEY,
                     windowEndTimeForDeadlineMs);
         }
         PersistableBundle taskExtras = new PersistableBundle();
         extras.putPersistableBundle(
-                BackgroundTaskSchedulerJobService.BACKGROUND_TASK_EXTRAS_KEY, taskExtras);
+                BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_EXTRAS_KEY, taskExtras);
 
         return new JobParameters(null /* callback */, taskId, extras, null /* transientExtras */,
                 null /* clipData */, 0 /* clipGrantFlags */, false /* overrideDeadlineExpired */,
-                null /* triggeredContentUris */, null /* triggeredContentAuthorities */,
-                null /* network */);
+                false /* isExpedited */, null /* triggeredContentUris */,
+                null /* triggeredContentAuthorities */, null /* network */);
     }
 
     private static JobParameters buildPeriodicJobParameters(
             int taskId, Long schedulingTimeMs, Long intervalForDeadlineMs, Long flexForDeadlineMs) {
         PersistableBundle extras = new PersistableBundle();
         if (schedulingTimeMs != null) {
-            extras.putLong(BackgroundTaskSchedulerJobService.BACKGROUND_TASK_SCHEDULE_TIME_KEY,
+            extras.putLong(BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_SCHEDULE_TIME_KEY,
                     schedulingTimeMs);
-            extras.putLong(
-                    BackgroundTaskSchedulerGcmNetworkManager.BACKGROUND_TASK_INTERVAL_TIME_KEY,
+            extras.putLong(BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_INTERVAL_TIME_KEY,
                     intervalForDeadlineMs);
             if (flexForDeadlineMs != null) {
-                extras.putLong(
-                        BackgroundTaskSchedulerGcmNetworkManager.BACKGROUND_TASK_FLEX_TIME_KEY,
+                extras.putLong(BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_FLEX_TIME_KEY,
                         flexForDeadlineMs);
             }
         }
         PersistableBundle taskExtras = new PersistableBundle();
         extras.putPersistableBundle(
-                BackgroundTaskSchedulerJobService.BACKGROUND_TASK_EXTRAS_KEY, taskExtras);
+                BackgroundTaskSchedulerDelegate.BACKGROUND_TASK_EXTRAS_KEY, taskExtras);
 
         return new JobParameters(null /* callback */, taskId, extras, null /* transientExtras */,
                 null /* clipData */, 0 /* clipGrantFlags */, false /* overrideDeadlineExpired */,
-                null /* triggeredContentUris */, null /* triggeredContentAuthorities */,
-                null /* network */);
+                false /* isExpedited */, null /* triggeredContentUris */,
+                null /* triggeredContentAuthorities */, null /* network */);
     }
 }
